# polybuild-poc

./: LICENSE  README.md
nlink-polybuild-poc/: Makefile  pkg.nlink
nlink-polybuild-poc/component-cli/: Makefile  nlink.txt
nlink-polybuild-poc/component-cli/include/: cli.h
nlink-polybuild-poc/component-cli/src/: main.c
nlink-polybuild-poc/component-core/: Makefile  nlink.txt
nlink-polybuild-poc/component-core/include/: core.h
nlink-polybuild-poc/component-core/src/: core.c
nlink-polybuild-poc/component-orchestrator/: Makefile  nlink.txt
nlink-polybuild-poc/component-orchestrator/include/: orchestrator.h
nlink-polybuild-poc/component-orchestrator/src/: orchestrator.c
nlink-polybuild-poc/component-resolver/: Makefile  nlink.txt
nlink-polybuild-poc/component-resolver/include/: resolver.h
nlink-polybuild-poc/component-resolver/src/: resolver.c
nlink-polybuild-poc/demo_project/: main.c  pkg.nlink
nlink-polybuild-poc/shared/configs/: compiler.nlink  compiler.nlink.mk  linker.nlink
nlink-polybuild-poc/shared/headers/: polybuild_common.h
polybuild-poc/: CMakeLists.txt  README.md
polybuild-poc/bindings/nodejs/: package.json
polybuild-poc/bindings/python/: setup.py
polybuild-poc/cli/: CMakeLists.txt
polybuild-poc/cli/src/: main.c
polybuild-poc/core/: CMakeLists.txt
polybuild-poc/core/include/polybuild/: resolver.h
polybuild-poc/core/src/: composer.c  resolver.c
polybuild-poc/packaging/c/: polybuild.pc.in
polybuild-poc/quality-gate/: memory-profiling.sh  sinphase-check.sh  static-analysis.sh
polybuild-poc/samples/cross-platform/: Makefile  demo.c
polybuild-poc/samples/lsp-server/src/: main.c
polybuild-poc/tests/: run_tests.sh
